--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     .info {
       position: absolute;
       top: 10px;
-      left: 10px;
+      left: 800px;
       background: rgba(0, 0, 0, 0.7);
       color: white;
       padding: 10px;
@@ -33,6 +33,7 @@
   </div>
 
   <!-- The Three.js scene will render here -->
+  <script type="module" src=".src/menu.js"></script>
   <script type="module" src="./main.js"></script>
 </body>
 </html>
